Add remove item from cart functionality

--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -52,7 +52,7 @@
                             <div class="col cart-items"> {{ item.quantity }} </div>
                             <div class="col cart-items">€{{ product.price }} </div>
                                 <div class="col cart-items"> 
-                                    <a class="remove-item" href=""><span class="badge rounded-pill bg-danger" id="remove_{{ item.item_id }}"><i class="fas fa-trash"></i>
+                                    <a class="remove-item" id="remove_{{ item.item_id }}"><span class="badge rounded-pill bg-danger" ><i class="fas fa-trash"></i>
                             </span></a></div>
                         </div>
                     </div>
@@ -111,9 +111,9 @@
     $('.remove-item').click(function(e) {
         var csrfToken = "{{ csrf_token }}";
         var itemId = $(this).attr('id').split('remove_')[1];
-        var url = `/bag/remove/${itemId}/`;
+        var url = `/cart/remove/${itemId}/`;
         var data = {'csrfmiddlewaretoken': csrfToken};
-
+        
         $.post(url, data)
          .done(function() {
              location.reload();
