--- a/templates/base.html
+++ b/templates/base.html
@@ -115,7 +115,7 @@
                     {% else %}
                     0
                     {% endif %}
-                    items selected
+                    item{{ product_count|pluralize }} selected
                   </p>
                   <p class="p-basket">
                     Total:
