--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -70,22 +70,20 @@
                 </div>
                 <div class="col-md-4 summary">
                     <div>
-                        <h5><b>Summary</b></h5>
+                        <h5><b>Order Summary: {{ product_count }} item{{ product_count|pluralize }} selected</b></h5>
                     </div>
                     <hr>
                     <div class="row">
-                        <div class="col" style="padding-left:0;">ITEMS {{ product_count }}</div>
-                        <div class="col text-right">€{{ grand_total|floatformat:2 }}</div>
+                        <div class="col" style="padding-left:0;">Order Total</div>
+                        <div class="col text-right">€ {{ total|floatformat:2 }}</div>
                     </div>
-                    <form>
-                        <p>SHIPPING</p> <select>
-                            <option class="text-muted">Standard-Delivery- {{ standard_delivery_percentage }}% </option>
-                        </select>
-                        <p>GIVE CODE</p> <input id="code" placeholder="Enter your code">
-                    </form>
+                    <div class="row">
+                        <div class="col" style="padding-left:0;">Delivery Fee</div>
+                        <div class="col text-right"> € {{ delivery|floatformat:2 }}</div>
+                    </div>
                     <div class="row" style="border-top: 1px solid rgba(0,0,0,.1); padding: 2vh 0;">
-                        <div class="col">TOTAL PRICE</div>
-                        <div class="col text-right">€{{ grand_total|floatformat:2 }}</div>
+                        <div class="col">GRAND TOTAL</div>
+                        <div class="col text-right">€ {{ grand_total|floatformat:2 }}</div>
                     </div> <button class="btn">CHECKOUT</button>
                 </div>
             </div>
