Add toast javascript method in base.html & message storage setting in django project

--- a/templates/base.html
+++ b/templates/base.html
@@ -187,13 +187,17 @@
 
   {% if messages %}
   <div class="message-container">
+      {% for message in messages %}
+        {% include 'includes/toasts/toast_success/html' %}
   </div>
   {% endif %}
 
 
 
   {% block postloadjs %} 
-  
+    <script type="text/javascript">
+      $('.toast').toast('show');
+    </script>
   {% endblock %}
 
   <footer>
