--- a/static/css/base.css
+++ b/static/css/base.css
@@ -762,3 +762,22 @@ button:focus {
     display: flex;
     justify-content: center;
 }
+
+/*********************************************
+				Toasts
+*********************************************/
+
+.message-container {
+  position: fixed;
+  top: 80px;
+  right: 15px;
+  z-index: 99999999999;
+}
+
+.custom-toast {
+  overflow: visible;
+}
+
+.toast-capper {
+  height: 2px;
+}
