Add button to keep user logged in & cancel logout action

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -95,6 +95,14 @@ a:hover {
   font-size: 1.2rem;
 }
 
+.btn-stay {
+  background-color: green;
+  color: white;
+  border-radius: 10px;
+  padding: 1rem 1.5rem;
+  font-size: 1.2rem;
+}
+
 .btn:hover {
   background-color: #d3b3ac;
   border-color: #d3b3ac;
