--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -87,10 +87,10 @@
                     </div>
 
                     <p>Apply a coupon:</p>
-                    <form action="{% url 'coupons:apply' %}" method="post">
+                    <form action="{% url 'coupon_apply' %}" method="post">
+                    {% csrf_token %}
                     {{ coupon_apply_form }}
                     <input type="submit" value="Apply">
-                    {% csrf_token %}
                     </form>
 
                     <div class="row" style="border-top: 1px solid rgba(0,0,0,.1); padding: 2vh 0;">
