Add delivery form in checkout & shopping cart summary

--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -83,7 +83,7 @@
                     </div>
                     <div class="row">
                         <div class="col" style="padding-left:0;">Discount</div>
-                        <div class="col text-right"> € {{ discount|floatformat:2 }}</div>
+                        <div class="col text-right"> € - {{ discount|floatformat:2 }}</div>
                     </div>
 
                     <h5 id="coupon"><b>Discount codes:</b></h5>
