--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -38,11 +38,11 @@
                         </a>
                     </div>
                     <div class="col-7">
-                        <p class="my-0"><strong>{{ item.product.name }}</strong></p>
+                        <p class="my-0"><strong>{{ item.product.friendly_name }}</strong></p>
                         <p class="my-0 small text-muted">Qty: {{ item.quantity }}</p>
                     </div>
                     <div class="col-3 text-right">
-                        <p class="my-0 small text-muted">${{ item.product.price }}</p>
+                        <p class="my-0 small text-muted">€ {{ item.product.price }}</p>
                     </div>
                 </div>
             {% endfor %}
