--- a/templates/allauth/account/password_reset.html
+++ b/templates/allauth/account/password_reset.html
@@ -7,6 +7,13 @@
 
 {% block content %}
 
+<div class="container-fluid header-background px-1 px-md-5 px-lg-1 px-xl-5 py-5 mx-auto">
+  <div class="card-login card0 border-0">
+    <div class="row d-flex">
+      <div class="col-lg-12">
+        <div class="card2 card-login border-0 px-4 py-5">
+          <div class="row mb-4 px-3">
+
     <h1>{% trans "Password Reset" %}</h1>
     {% if user.is_authenticated %}
     {% include "account/snippets/already_logged_in.html" %}
@@ -17,8 +24,16 @@
     <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
         {% csrf_token %}
         {{ form.as_p }}
-        <input type="submit" value="{% trans 'Reset My Password' %}" />
+        <input class="btn-blue text-center" type="submit" value="{% trans 'Reset' %}" />
     </form>
 
     <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
+
+         </div>
+        </div>
+       </div>
+      </div>
+   </div>
+</div>
+
 {% endblock %}
