Add stripe javascript in base.html

--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -26,6 +26,7 @@
                     <p class="mb-1 mt-0 small text-muted">Subtotal</p>
                 </div>
             </div>
+            <hr class="my-0">
             {% for item in cart_items %}
                 <div class="row">
                     <div class="col-2 mb-1">
