--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -97,12 +97,15 @@
                 </fieldset>
 
 
-                <fieldset class="rounded px-3">
-                    <legend class="field-label small text-black px-2 w-auto">Payment</legend>
-                    <!-- A stripe element will be located here -->
+                <fieldset class="px-3">
+                    <legend class="fieldset-label small text-black px-2 w-auto">Payment</legend>
+                    <!-- A Stripe card element will go here -->
                     <div class="mb-3" id="card-element"></div>
-                    <!-- Used to display error in the interface -->
+
+                    <!-- Used to display form errors -->
                     <div class="mb-3 text-danger" id="card-errors" role="alert"></div>
+                    <!-- Pass the client secret to the view so we can get the payment intent id -->
+                    <input type="hidden" value="{{ client_secret }}" name="client_secret">
                 </fieldset>
 
                 <div class="submit-button text-right mt-5 mb-2">                    
@@ -122,7 +125,7 @@
                         <span class="icon">
                             <i class="fas fa-exclamation-circle"></i>
                         </span>
-                        <span>Your card will be charged <strong>${{ total_price_after_discount|floatformat:2 }}</strong></span>
+                        <span>Your card will be charged <strong>€{{ total_price_after_discount|floatformat:2 }}</strong></span>
                     </p>
                 </div>
                
@@ -136,5 +139,10 @@
 
 {% endblock %}
 
-
+{% block postloadjs %}
+    {{ block.super }}
+    {{ stripe_public_key|json_script:"id_stripe_public_key" }}
+    {{ client_secret|json_script:"id_client_secret" }}
+    <script src="{% static 'checkout/js/stripe_elements.js' %}"></script>
+{% endblock %}
 
