--- a/static/css/base.css
+++ b/static/css/base.css
@@ -814,7 +814,7 @@ button:focus {
 }
 
 /*********************************************
-				CheckOut
+				CheckOut & Stripe
 *********************************************/
 
 .text-bold-red{
