--- a/static/css/base.css
+++ b/static/css/base.css
@@ -498,6 +498,18 @@ button:focus {
   font-size: 30px;
 }
 
+
+.font-weight-bold-summary-titles {
+  font-weight: bold;
+  text-align: left;
+  font-size: 20px;
+}
+
+.font-weight-bold-summary {
+  text-align: left;
+  font-size: 15px;
+}
+
 .font-weight-bold-login {
   text-align: center;
 }
