--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -122,7 +122,7 @@
                         </span>
                     </button>
                     <p class="small text-danger my-0">
-                        <span class="icon">
+                        <span class="icon icon-loading">
                             <i class="fas fa-exclamation-circle"></i>
                         </span>
                         <span>Your card will be charged <strong>€{{ total_price_after_discount|floatformat:2 }}</strong></span>
@@ -135,6 +135,18 @@
         
 
     </div>
+</div>
+
+<div id="loading-overlay">
+    <h1 class="text-light logo-font loading-spinner">
+        <span class="icon">
+            <i class="fas fa-spinner fa-pulse"></i>
+        </span>
+        <span class="icon">
+            <p>Your payment is being processed.
+            </p>
+        </span>
+    </h1>
 </div>
 
 {% endblock %}
