--- a/static/css/base.css
+++ b/static/css/base.css
@@ -890,14 +890,18 @@ select option[value=""] {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(23, 162, 184, .85);
-    z-index: 9999;
+    background: rgba(17, 66, 110, 0.9);
+    z-index: 99999999999999999;
 }
 
 .loading-spinner {
-	display: flex;
+	  display: flex;
     align-items: center;
     justify-content: center;
     margin: 0;
     height: 100%;
+}
+
+.icon-loading {
+  color : #ff7b7b;
 }
