--- a/static/css/base.css
+++ b/static/css/base.css
@@ -891,7 +891,7 @@ select option[value=""] {
     width: 100%;
     height: 100%;
     background: rgba(17, 66, 110, 0.9);
-    z-index: 99999999999999999;
+    z-index: 9999;
 }
 
 .loading-spinner {
