Create profiles app, views and urls

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -906,3 +906,6 @@ select option[value=""] {
   color : #ff7b7b;
 }
 
+/*********************************************
+				Profile app
+*********************************************/
