--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -23,7 +23,7 @@
               method="post"
               action="{% url 'account_signup' %}"
             >
-              {% csrf_token %} {{ form.as_p }} 
+              {% csrf_token %} {{ form|crispy }} 
               {% if redirect_field_value %}
               <input
                 type="hidden"
@@ -31,9 +31,15 @@
                 value="{{ redirect_field_value }}"
               />
               {% endif %}
-              <button type="submit" class="btn btn-blue text-center">
-                {% trans "Sign Up" %}
-              </button>
+
+              <div class="form-group user-form">
+                <button class="btn btn-blue text-center" type="submit">
+                  {% trans "Sign Up" %}
+                </button>
+                <a class="btn btn-yellow text-center" href="{% url 'home' %}" role="button">{% trans "HOME" %}</a>
+              </div>
+
+
             </form>
           </div>
         </div>
