--- a/templates/base.html
+++ b/templates/base.html
@@ -75,10 +75,10 @@
               <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-auto">
 
                 {% if request.user.is_authenticated %}
-                {% if request.user.is_superuser %}
+                <!--  {% if request.user.is_superuser %}
+                {% endif %} -->
                 <li class="nav-item"></li>
-                <a href="" class="nav-link">Manage Store</a>
-                {% endif %}
+                <a href="{% url 'profile' %}" class="nav-link">Profile</a>
                 <li class="nav-item">
                   <a href="{% url 'account_logout' %}" class="nav-link"> Logout </a>
                 </li>
