--- a/static/css/base.css
+++ b/static/css/base.css
@@ -992,3 +992,14 @@ color: #fff;
 .allauth-form-inner-content a {
 color: #17a2b8; /* text-info */
 }
+
+
+/********************
+Whislist
+*********************/
+
+#error-wishlist{
+  font-style: italic;
+  color: red;
+  font-weight: bold;
+}
