Add css styles for verification sent page

--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -9,11 +9,16 @@
     <div class="row">
         <div class="col">
             <hr>
-            <h2 mb-4> My Profile </h2>
+            <h2 mb-4> My Profile</h2>
             <hr>
         </div>
-        
     </div>
+
+    <div class="row">
+      <div class="col">
+          <h3 mb-4> Hi  {{ profile }}! Here you will find your order history and wishlist </h3>
+      </div>
+  </div>
 
     <div class="row">
         <div class="col">
