--- a/templates/allauth/account/verification_sent.html
+++ b/templates/allauth/account/verification_sent.html
@@ -5,8 +5,33 @@
 {% block head_title %}{% trans "Verify Your E-mail Address" %}{% endblock %}
 
 {% block content %}
-    <h1>{% trans "Verify Your E-mail Address" %}</h1>
 
-    <p>{% blocktrans %}We have sent an e-mail to you for verification. Follow the link provided to finalize the signup process. Please contact us if you do not receive it within a few minutes.{% endblocktrans %}</p>
+<div
+  class="container-fluid header-background px-1 px-md-5 px-lg-1 px-xl-5 py-5 mx-auto"
+>
+  <div class="card-logout card0 border-0">
+    <div class="row d-flex">
+      <div class="col-lg-12">
+        <div class="card2 card-logout border-0 px-4 py-5">
+          <div class="row mb-4 px-3">
+            <h1>{% trans "Verify Your E-mail Address" %}</h1>
+            <p>{% blocktrans %}We have sent an e-mail to you for verification. Follow the link provided to finalize the signup process. Please contact us if you do not receive it within a few minutes.{% endblocktrans %}</p>
+          </div>
+          <div class="form-group user-form">
+            <a class="btn btn-yellow text-center" href="{% url 'home' %}" role="button">{% trans "HOME" %}</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+</div>
+
 
 {% endblock %}
+
+
+
+
+
+
