--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -20,6 +20,24 @@
       </div>
   </div>
 
+  <div class="row">
+    <div class="col-12 col-lg-6">
+        <p class="text-muted">Default Delivery Information</p>
+        <form class="mt-3" action="{% url 'profile' %}" method="POST" id="profile-update-form">
+          {% csrf_token %}
+          {{form|crispy}}
+          <button class="btn btn-black rounded-0 text-uppercase float-right">Update Information</button>
+        </form>
+    </div>
+
+    <div class="col-12 col-lg-6">
+      <p class="text-muted">Order History</p>
+      {{ orders }}
+    </div>
+
+
+</div>
+
     <div class="row">
         <div class="col">
             <h2 mb-4> Your wishlit list </h2>
