--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -191,5 +191,25 @@
     </div>
 </div>
 
+<div class="row">
+    <div class="col-12 col-lg-7 text-right">
+        {% if from_profile %}
+            <a href="{% url 'profile' %}" class="btn btn-black rounded-0 my-2">
+                <span class="icon mr-2">
+                    <i class="fas fa-angle-left"></i>
+                </span>
+                <span class="text-uppercase">Back to Profile</span>
+            </a>
+        {% else %}
+            <a href="{% url 'products' %}" class="btn btn-black rounded-0 my-2">
+                <span class="icon mr-2">
+                    <i class="fas fa-gifts"></i>
+                </span>
+                <span class="text-uppercase">Products</span>
+            </a>
+        {% endif %}
+    </div>
+</div>
+
 
 {% endblock %}
