--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1003,3 +1003,29 @@ Whislist
   color: red;
   font-weight: bold;
 }
+
+/********************
+Order history
+*********************/
+
+.order-history{
+  max-height: 416px; /* height of profile form + submit button */
+  overflow-y: auto;
+}
+
+#profile-update-form .form-control {
+  color: #000;
+}
+
+#profile-update-form input::placeholder {
+  color: #aab7c4;
+}
+
+#id_default_country,
+#id_default_country option:not(:first-child) {
+  color: #000;
+}
+
+#id_default_country option:first-child {
+  color: #aab7c4;
+}
