Add Facebook login setup

--- a/templates/allauth/account/login.html
+++ b/templates/allauth/account/login.html
@@ -85,6 +85,14 @@
     </div>
   </div>
 </div>
+
+<div class="social">
+  <ul>
+<li class="facebook"></li>
+<a href="{% url 'begin' 'facebook' %}"> Sign In with Facebook </a>
+  </ul>
+</div>
+
 {% endblock %}
 
 {% block postloadjs %}
