Add css styles for confirm email page

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -285,6 +285,11 @@ margin: 10px 0px 10px 0px;
   font-size: 28px;
 }
 
+.link-confirmation {
+  color: #000;
+  decoration
+}
+
 .card {
   min-height: 400px;
   width: 100%;
