Fix vertical alignment of search form

--- a/reviews/templates/reviews/submit_review.html
+++ b/reviews/templates/reviews/submit_review.html
@@ -2,6 +2,16 @@
 {% load static %} 
 {% block content %}
 
-HOLAAAA
+<div class="overlay"></div>
+
+<div class="container mb-2" id="shopping-cart">
+    <div class="row">
+        <div class="col">
+            <hr>
+            <h3 mb-4> Your opinion is important for us. Please tell us a bit about your shopping experience with us:</h3>
+            <hr>
+        </div>
+    </div>
+</div>
 {% endblock %}
 
