Add Review app, models, views and urls. Migrations to postgresql

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1040,3 +1040,13 @@ Order history
 #id_default_country option:first-child {
   color: #aab7c4;
 }
+
+#review-form{
+  width: 70%;
+}
+
+/*
+.asteriskField {
+  display: none;
+}
+*/
