--- a/templates/base.html
+++ b/templates/base.html
@@ -109,7 +109,7 @@
                 <!--  {% if request.user.is_superuser %}
                 {% endif %} -->
                 <li class="nav-item"></li>
-                <a href="{% url 'submit_review' %}" class="nav-link">Reviews</a>
+                <a href="{% url 'submit_review_page' %}" class="nav-link">Reviews</a>
                 {% endif %}
                 <li class="list-inline-item">
                     <a href="{% url 'view_cart' %}">
