--- a/reviews/templates/reviews/submit_review.html
+++ b/reviews/templates/reviews/submit_review.html
@@ -3,15 +3,30 @@
 {% block content %}
 
 <div class="overlay"></div>
-
 <div class="container mb-2" id="shopping-cart">
     <div class="row">
         <div class="col">
-            <hr>
+            <h3> Hi <strong>{{ profile }}</strong>,  </h3>
             <h3 mb-4> Your opinion is important for us. Please tell us a bit about your shopping experience with us:</h3>
             <hr>
+        <div class="container-fluid" id="review-form">
+            <form action="{% url 'submit_review' %}" method="POST" id="payment-form">
+                {% csrf_token %}
+                {{ form|crispy }}
+
+                <div class="form-group user-form">
+                <button class="btn btn-blue text-center" type="submit">
+                    Submit
+                </button>
+                </div>
+            </form>
+        </div>
+           
         </div>
     </div>
 </div>
+
 {% endblock %}
+
+
 
