--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -1,117 +1,131 @@
-{% extends "base.html" %} 
-{% load static %}
-
-{% block content %}
+{% extends "base.html" %} {% load static %} {% block content %}
 
 <div class="overlay"></div>
 
 <div class="container mb-2" id="shopping-cart">
-    <div class="row">
-        <div class="col">
-            <hr>
-            <h2 mb-4> My Profile</h2>
-            <hr>
-        </div>
+  <div class="row">
+    <div class="col">
+      <hr />
+      <h2 mb-4>My Profile</h2>
+      <hr />
     </div>
-
-    <div class="row">
-      <div class="col">
-          <h3 mb-4> Hi  {{ profile }}! Here you will find your order history and wishlist </h3>
-      </div>
   </div>
 
   <div class="row">
-    <div class="col-12 col-lg-6">
-        <p class="text-muted">Default Delivery Information</p>
-        <form class="mt-3" action="{% url 'profile' %}" method="POST" id="profile-update-form">
-          {% csrf_token %}
-          {{form|crispy}}
-          <button class="btn btn-black rounded-0 text-uppercase float-right">Update Information</button>
-        </form>
+    <div class="col">
+      <h3 mb-4>
+        Hi {{ profile }}! Here you will find your order history and wishlist
+      </h3>
+    </div>
+  </div>
+
+  <div class="row profile">
+    <div class="col-12 col-lg-6 profile-div">
+      <p class="text-muted">Default Delivery Information</p>
+      <form
+        class="mt-3 profile-column"
+        action="{% url 'profile' %}"
+        method="POST"
+        id="profile-update-form"
+      >
+        {% csrf_token %} {{form|crispy}}
+        <button class="btn btn-black rounded-0 text-uppercase float-right">
+          Update Information
+        </button>
+      </form>
     </div>
 
-    <div class="col-12 col-lg-6">
+    <div class="col-12 col-lg-6 profile-div">
       <p class="text-muted">Order History</p>
-      {{ orders }}
 
       <div class="order-history table-responsive">
-        <table class="table table-sm table-borderless">
-            <thead>
-                <tr>
-                    <th>Order Number</th>
-                    <th>Date</th>
-                    <th>Items</th>
-                    <th>Order Total</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for order in orders %}
-                    <tr>
-                        <td>
-                            <a href="{% url 'order_history' order.order_number %}"
-                            title="{{ order.order_number }}">
-                                {{ order.order_number|truncatechars:6 }}
-                            </a>
-                        </td>
-                        <td>{{ order.date }}</td>
-                        <td>
-                            <ul class="list-unstyled">
-                                {% for item in order.lineitems.all %}
-                                    <li class="small">
-                                        {{ item.product.friendly_name }} x{{ item.quantity }}
-                                    </li>
-                                {% endfor %}
-                            </ul>
-                        </td>
-                        <td>${{ order.grand_total }}</td>
-                    </tr>
-                {% endfor %}
-            </tbody>
+        <table class="table table-sm table-borderless profile-column">
+          <thead>
+            <tr>
+              <th>Order Number</th>
+              <th>Date</th>
+              <th>Items</th>
+              <th>Order Total</th>
+            </tr>
+          </thead>
+          <tbody>
+            {% for order in orders %}
+            <tr>
+              <td>
+                  {{ order.order_number|truncatechars:10 }}
+              </td>
+              <td>{{ order.date }}</td>
+              <td>
+                <ul class="list-unstyled">
+                  {% for item in order.lineitems.all %}
+                  <li class="small">
+                    {{ item.product.friendly_name }} x{{ item.quantity }}
+                  </li>
+                  {% endfor %}
+                </ul>
+              </td>
+              <td>€{{ order.grand_total }}</td>
+            </tr>
+            {% endfor %}
+          </tbody>
         </table>
+      </div>
     </div>
+  </div>
 
+  <div class="row profile profile-div">
+    <div class="col wishlist-column">
+    <p class="text-muted">Your wishlist</p>
+      {% if wishlist %} {% for product in wishlist %}
+      <div class="card card-wishlist mb-3 rounded-0">
+        <div class="row g-0">
+          <div class="col-md-2 lg-4">
+            {% if product.image %}
 
-    </div>
+            <a href="{% url 'product_detail' product.id %}">
+                <img
+                class="img-fluid d-block p-2"
+                width="135px"
+                src="{{ product.image.url }}"
+                alt="{{ product.friendly_name }}"
+              />
+              </a>
 
-
-</div>
-
-    <div class="row">
-        <div class="col">
-            <h2 mb-4> Your wishlit list </h2>
-        {% if wishlist %}
-        {% for product in wishlist %}
-        <div class="card mb-3 rounded-0">
-            <div class="row g-0">
-              <div class="col-md-2 lg-4">
-                {% if product.image %}
-                  <img class="img-fluid d-block p-2" width="135px" src="{{ product.image.url }}"
-                    alt="{{ product.friendly_name }}" />
-                {% else %}
-                <img class="img-fluid d-block p-2" width="135px" src="{{ MEDIA_URL }}noimage.png"
-                    alt="{{ product.friendly_name }}" />
-                {% endif %}
-              </div>
-              <div class="col-md-10">
-                <div class="card-body">
-                  <h5 class="card-title">{{product.friendly_name}}</h5>
-                  <p class="card-text">{{product.description}}</p>
-                  <p class="card-text"><small class="text-muted">€ {{product.price}}</small></p>
-                  <a type="button" class="btn btn-primary fw500 btn-sm" href="{% url 'add_to_wishlist' product.id %}">Remove from Wishlist</a>
-                </div>
-              </div>
-            </div>
+            {% else %}
+            <a href="{% url 'product_detail' product.id %}">
+            <img
+              class="img-fluid d-block p-2"
+              width="135px"
+              src="{{ MEDIA_URL }}noimage.png"
+              alt="{{ product.friendly_name }}"
+            />
+        </a>
+            {% endif %}
           </div>
+          <div class="col-md-10">
+            <div class="card-body">
+              <h5 class="card-title">{{product.friendly_name}}</h5>
+              <p class="card-text">{{product.description}}</p>
+              <p class="card-text">
+                <small class="text-muted">€ {{product.price}}</small>
+              </p>
 
-        {% endfor %}
-        {% else %}
-           <p class="card-text">No products have been added to your wishlist yet</p>
-        {% endif %}
+            </div>
+            <a
+            type="button"
+            class="btn btn-yellow-wishlist text-center"
+            href="{% url 'add_to_wishlist' product.id %}"
+            >Remove from Wishlist</a
+          >
+          </div>
         </div>
-        
+      </div>
+
+      {% endfor %} {% else %}
+      <p class="card-text">No products have been added to your wishlist yet</p>
+      {% endif %}
     </div>
+  </div>
 </div>
 
 {% endblock %}
-
-
